--- a/app-1-ingress.yaml
+++ b/app-1-ingress.yaml
@@ -10,7 +10,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app-1-service
+            name: app-1-svc
             port:
               number: 8080
   ingressClassName: nginx
