--- a/app-1-svc.yaml
+++ b/app-1-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-2-service
+  name: app-1-svc
 spec:
   selector:
-    app: app-2
+    app: app-1
   ports:
     - protocol: TCP
       port: 8080
