--- a/app-2-ingress.yaml
+++ b/app-2-ingress.yaml
@@ -10,7 +10,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app-2-service
+            name: app-2-svc
             port:
               number: 8080
   ingressClassName: nginx
