--- a/app-2-svc.yaml
+++ b/app-2-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-1-service
+  name: app-2-svc
 spec:
   selector:
-    app: app-1
+    app: app-2
   ports:
     - protocol: TCP
       port: 8080
