--- a/app-1-dep.yaml
+++ b/app-1-dep.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: app-1-container
-        image: your-app-1-image:tag
+        image: ghcr.io/denoslab/ensf400-sample-app:v1
         ports:
         - containerPort: 8080
