--- a/app-2-dep.yaml
+++ b/app-2-dep.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: app-2-container
-        image: your-app-2-image:tag
+        image: ghcr.io/denoslab/ensf400-sample-app:v2
         ports:
         - containerPort: 8080
