--- a/app-1-dep.yaml
+++ b/app-1-dep.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-1-dep
+  labels:
+    app: app-1
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: app-1
