--- a/app-1-ingress.yaml
+++ b/app-1-ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/canary-weight: "70"
 spec:
   rules:
-  - http:
+  - host: backend
+    http:
       paths:
       - path: /app
         pathType: Prefix
@@ -15,6 +16,4 @@ spec:
           service:
             name: app-1-svc
             port:
-              number: 8080
-  ingressClassName: nginx
-  
+              number: 80
