--- a/app-2-ingress.yaml
+++ b/app-2-ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/canary-weight: "30"
 spec:
   rules:
-  - http:
+  - host: backend
+    http:
       paths:
       - path: /app
         pathType: Prefix
@@ -15,6 +16,5 @@ spec:
           service:
             name: app-2-svc
             port:
-              number: 8080
-  ingressClassName: nginx
+              number: 80
 
