--- a/nginx-ingress.yaml
+++ b/nginx-ingress.yaml
@@ -4,9 +4,12 @@ metadata:
   name: nginx-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
+  labels:
+    app: nginx
 spec:
   rules:
-  - http:
+  - host: backend
+    http:
       paths:
       - path: /nginx
         pathType: Prefix
@@ -14,4 +17,4 @@ spec:
           service:
             name: nginx-svc
             port:
-              number: 8080
+              number: 80
