I don't know if this is any better

--- a/nginx-configmap.yaml
+++ b/nginx-configmap.yaml
@@ -3,14 +3,14 @@ kind: ConfigMap
 metadata:
   name: nginx-configmap
 data:
-  nginx.cfg: |
+  nginx.conf: |
     upstream backend {
-        server app-1:8080;
-        server app-2:8080;
+        server app-1-svc:80;
+        server app-2-svc:80;
     }
 
     server {
-        location / {
+        location /nginx {
             proxy_pass http://backend;
         }
     }
