--- a/nginx-dep.yaml
+++ b/nginx-dep.yaml
@@ -21,8 +21,8 @@ spec:
         - containerPort: 8080
         volumeMounts:
         - name: nginx-config-volume
-          mountPath: /etc/nginx/nginx.cfg
-          subPath: nginx.cfg
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
       volumes:
       - name: nginx-config-volume
         configMap:
