--- a/nginx-ingress.yaml
+++ b/nginx-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: nginx-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
+    ingressClassName: nginx
 spec:
   rules:
   - host: backend
