--- a/app-1-ingress.yaml
+++ b/app-1-ingress.yaml
@@ -2,18 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app-1-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: "70"
 spec:
   rules:
-  - host: backend
-    http:
-      paths:
-      - path: /app
-        pathType: Prefix
-        backend:
-          service:
-            name: app-1-svc
-            port:
-              number: 80
+    - http:
+        paths:
+          - path: /app
+            pathType: Prefix
+            backend:
+              service:
+                name: app-1-svc
+                port:
+                  number: 8080
