--- a/nginx-configmap.yaml
+++ b/nginx-configmap.yaml
@@ -3,14 +3,13 @@ kind: ConfigMap
 metadata:
   name: nginx-configmap
 data:
-  nginx.conf: |
+  nginx.cfg: |
     upstream backend {
-        server app-1-svc:80;
-        server app-2-svc:80;
+        server app-1:8080;
+        server app-2:8080;
     }
-
     server {
-        location /nginx {
+        location / {
             proxy_pass http://backend;
         }
     }
