changed app deploy files

--- a/app-1-dep.yaml
+++ b/app-1-dep.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: app-1
           image: ghcr.io/denoslab/ensf400-sample-app:v1
+          imagePullPolicy: Always
           ports:
-            - containerPort: 8080
+            - containerPort: 3000
