--- a/app-2-dep.yaml
+++ b/app-2-dep.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: app-2
           image: ghcr.io/denoslab/ensf400-sample-app:v2
+          imagePullPolicy: Always
           ports:
-            - containerPort: 8080
+            - containerPort: 3000
