worksgit add -Agit add -Agit add -A

--- a/assignment3/app-1-ingress.yaml
+++ b/assignment3/app-1-ingress.yaml
@@ -1,18 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-2-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: "30"
+  name: app-1-ingress
 spec:
   rules:
     - http:
         paths:
-          - path: /app
+          - path: /
             pathType: Prefix
             backend:
               service:
-                name: app-2-svc
+                name: app-1-svc
                 port:
                   number: 3000
