--- a/assignment3/app-2-ingress.yaml
+++ b/assignment3/app-2-ingress.yaml
@@ -1,18 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-1-ingress
+  name: app-2-ingress
   annotations:
+    ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: "70"
+    nginx.ingress.kubernetes.io/canary-weight: "30"
 spec:
   rules:
     - http:
         paths:
-          - path: /app
+          - path: /
             pathType: Prefix
             backend:
               service:
-                name: app-1-svc
+                name: app-2-svc
                 port:
                   number: 3000
